--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Ruleta",
-            "url": "http://localhost:5500/zscaler.html",
+            "url": "http://localhost:5500/ruleta.html",
             "webRoot": "${workspaceFolder}"
         },
         {
